- fixed about page CSS for text wrap. - fixed spelling of Strategic in meta description

--- a/assets/css/global-style.css
+++ b/assets/css/global-style.css
@@ -1110,6 +1110,13 @@ semicolon at the end of a space seperateed list */
   background-color: rgba(0, 0, 0, 0.85);
 }
 
+
+/* fix for contact and about page rows */
+#preferences-form {
+  width: 100%;
+}
+
+
 .review-baseline,
 #section-settings h4,
 #section-contact h4,
